--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,12 +1,53 @@
+# Application Name
+spring.application.name=mental-health-app
+
+# Server Port
+server.port=8080
+
 # Database Configuration for Docker
 spring.datasource.url=jdbc:postgresql://postgres:5432/mental_health_db
 spring.datasource.username=postgres
 spring.datasource.password=231220
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=false
+
+# JWT Configuration
+jwt.secret=your-secret-key-change-this-in-production-must-be-at-least-256-bits-long-for-security
+jwt.expiration=86400000
 
 # MinIO Configuration for Docker
+# Internal URL for MinIO client connection (service to service)
 minio.url=http://minio:9000
+# External URL accessible from outside Docker (client access)
+minio.external-url=http://localhost:9000
 minio.access-key=minioadmin
 minio.secret-key=minioadmin
 minio.bucket-name=pet-app-bucket
+# Set to true to make bucket publicly readable
+minio.make-bucket-public=true
 
-# Other configs remain the same
+# OpenAI Configuration
+openai.api-key=${OPENAI_API_KEY:your-openai-api-key-here}
+openai.model=gpt-3.5-turbo
+openai.max-tokens=500
+
+# Pet Default Configuration
+pet.default.animal-types=Kucing,Anjing,Kelinci,Hamster,Burung
+pet.default.min-weight=0.5
+pet.default.max-weight=50.0
+pet.default.min-age-years=0
+pet.default.max-age-years=15
+
+# File Upload
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+# Logging
+logging.level.com.mentalhealth.aviren=INFO
+logging.level.root=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
