fix: public url implementation on minio

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -4,6 +4,9 @@ spring.application.name=mental-health-app
 # Server Port
 server.port=8080
 
+# Server Base URL - Diambil dari environment variable
+server.base-url=${SERVER_BASE_URL:http://localhost:8080}
+
 # Database Configuration for Docker
 spring.datasource.url=jdbc:postgresql://postgres:5432/mental_health_db
 spring.datasource.username=postgres
@@ -21,7 +24,6 @@ jwt.secret=your-secret-key-change-this-in-production-must-be-at-least-256-bits-l
 jwt.expiration=86400000
 
 # MinIO Configuration for Docker
-# Internal URL for MinIO client connection (service to service)
 minio.url=http://minio:9000
 # External URL accessible from outside Docker (client access)
 minio.external-url=http://localhost:9000
