--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ POSTGRES_PASSWORD=231220
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET_NAME=pet-app-bucket
+SERVER_BASE_URL=https://your-server-base-url-here
 
 # JWT
 JWT_SECRET=your-secret-key-change-this-in-production-must-be-at-least-256-bits
