feat: pet image, welcoming statement, and openai chat context adjustment

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -39,11 +39,11 @@ openai.model=gpt-3.5-turbo
 openai.max-tokens=500
 
 # Pet Default Configuration
-pet.default.animal-types=Kucing,Anjing,Kelinci,Hamster,Burung
-pet.default.min-weight=0.5
-pet.default.max-weight=50.0
-pet.default.min-age-years=0
-pet.default.max-age-years=15
+pet.default.animal-types=Beaver
+pet.default.min-weight=10.0
+pet.default.max-weight=35.0
+pet.default.min-age-years=1
+pet.default.max-age-years=8
 
 # File Upload
 spring.servlet.multipart.max-file-size=5MB
